--- a/devis.html
+++ b/devis.html
@@ -192,13 +192,13 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group has-feedback ">
-                  <label for="firstname">Prénom</label>
+                  <label class="l-bold" for="firstname">Prénom</label>
                   <input type="text" class="form-control " id="firstname" name="firstname" value="">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group has-feedback ">
-                  <label for="lastname">Nom</label>
+                  <label class="l-bold" for="lastname">Nom</label>
                   <input type="text" class="form-control " id="lastname" name="lastname" value="">
                 </div>
               </div>
@@ -206,7 +206,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group has-feedback ">
-                  <label for="address">Adresse</label>
+                  <label class="l-bold" for="address">Adresse</label>
                   <input type="text" class="form-control " id="address" name="address" value="">
                 </div>
               </div>
@@ -214,7 +214,7 @@
             <div class="row">
               <div class="col-md-12 form-pseudo">
                 <div class="form-group has-feedback ">
-                  <label for="pseudo">pseudo</label>
+                  <label class="l-bold" for="pseudo">pseudo</label>
                   <input type="text" class="form-control " id="pseudo" name="pseudo" value="">
                 </div>
               </div>
@@ -222,13 +222,13 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="form-group has-feedback ">
-                  <label for="zipcode">Code postal</label>
+                  <label class="l-bold" for="zipcode">Code postal</label>
                   <input type="text" class="form-control " id="zipcode" name="zipcode" value="">
                 </div>
               </div>
               <div class="col-md-7">
                 <div class="form-group has-feedback ">
-                  <label for="city">Ville</label>
+                  <label class="l-bold" for="city">Ville</label>
                   <input type="text" class="form-control" id="city" name="city" value="">
                 </div>
               </div>
@@ -236,7 +236,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group has-feedback ">
-                  <label for="email">E-mail</label>
+                  <label class="l-bold" for="email">E-mail</label>
                   <input type="text" class="form-control " id="email" name="email" value="">
                 </div>
               </div>
@@ -244,7 +244,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group has-feedback ">
-                  <label for="phone">Téléphone</label>
+                  <label class="l-bold" for="phone">Téléphone</label>
                   <input type="text" class="form-control " id="phone" name="phone" value="">
                 </div>
               </div>
@@ -287,7 +287,7 @@
             </div>
 
             <div class="form-group has-feedback ">
-              <label for="message">Message</label>
+              <label class="l-bold" for="message">Message</label>
 
               <textarea rows="6" name="message" class="form-control h-100" id="message"></textarea>
             </div>
