--- a/renovation-toiture.html
+++ b/renovation-toiture.html
@@ -271,6 +271,7 @@
 </section>
 <hr>
 
+
 <section class="pre-contact" id="pre-contact">
   <div class="container">
     <div class="row">
@@ -347,8 +348,8 @@
       <h3>Autre services </h3>
       <h4 class="vide">Nos vérandas </h4>
       <ul class="px-0">
-        <li class="p"><a href="les-etapes"><i class="fas fa-chevron-right"></i> Les étapes </a></li>
-        <li class="p"><a href="nos-styles"><i class="fas fa-chevron-right"></i> Nos styles</a></li>
+        <li class="p"><a href="/renovation-veranda"><i class="fas fa-chevron-right"></i> Rénovation Véranda </a></li>
+        <li class="p"><a href="#"><i class="fas fa-chevron-right"></i> Rénovation toiture plate</a></li>
       </ul>
     </div>
     <div class="col-md-4">
