--- a/veranda-ermont.html
+++ b/veranda-ermont.html
@@ -283,7 +283,7 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
       </div>
       <div class="col-md-12">
         <h2>Pourquoi nous choisir pour concevoir et réaliser votre véranda à Ermont ? </h2>
-        <p>Chez CFV Véranda, nous donnons une place particulière à votre projet. Notre objectif est de vous satisfaire
+        <p style="color:white">Chez CFV Véranda, nous donnons une place particulière à votre projet. Notre objectif est de vous satisfaire
           en vous proposant le meilleur des services. Collaborer avec nous, c’est disposer d’une véranda unique en
           adéquation à votre maison. </p>
       </div>
@@ -397,7 +397,7 @@ action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
   <div class="container text-justify" style="color: white;">
     <div class="row">
       <div class="col-12">
-        <h2 style="color:#39a4a8" class="text-center">Nos principaux atouts </h2>
+        <h2 style="color:#39a4a8 !important;" class="text-center">Nos principaux atouts </h2>
         <h2>On vous propose des designs modernes </h2>
         <p style="color: white;">
           Nos 20 ans d’expérience nous ont permis d’évoluer avec des attentes de plus en plus modernes. Nos techniciens
