--- a/nos-styles.html
+++ b/nos-styles.html
@@ -269,6 +269,102 @@
 
 	</div>
 </section>
+
+
+<section class="pre-contact" id="pre-contact">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h3>Contactez-nous </h3>
+
+        <form class="form contact_content-form" id="contactForm" method="post"
+          action="https://jgviaboye9.execute-api.eu-west-3.amazonaws.com/prod/notify">
+          <input type="hidden" name="lang" value="fr" />
+          <input type="hidden" name="redirectUrl" value="/message-envoye" />
+          <input type="hidden" name="type" value="contact" />
+          <input type="hidden" name="website" value="" />
+          <input type="hidden" name="lang" value="fr" />
+          <input type="hidden" name="firstName" value="" />
+          <input type="hidden" name="key" value="6LdeDUYqAAAAABLdL_IHhpdJf6hJK2ScWPTx_EcU" />
+          <div class="row">
+            <div class="col-md-6 my-2">
+              <div class="form-group has-feedback ">
+                <input type="text" class="form-control " id="firstname" name="firstname" value="" placeholder="Prenom">
+              </div>
+            </div>
+            <div class="col-md-6 my-2">
+              <div class="form-group has-feedback ">
+                <input type="text" class="form-control " id="lastname" name="lastname" value="" placeholder="Nom">
+              </div>
+            </div>
+            <div class="col-md-6 my-2">
+              <div class="form-group has-feedback ">
+                <input type="text" class="form-control " id="email" name="email" value="" placeholder="E-mail">
+              </div>
+            </div>
+            <div class="col-md-6 my-2">
+              <div class="form-group has-feedback ">
+                <input type="text" class="form-control " id="phone" name="phone" value="" placeholder="Téléphone">
+              </div>
+            </div>
+            <div class="col-md-12 my-2">
+              <div class="form-group has-feedback ">
+                <textarea name="message" id="form_message" class="form-control h-100" rows="5" placeholder="Message"></textarea>
+              </div>
+            </div>
+          </div>
+
+      <div class="div01"></div>
+      <div class="row ">
+        <div class="col-xs-12 text-center">
+          <div class="row justify-content-center">
+            <div class="checkbox d-flex mb-5 mx-5 justify-content-center">
+              <input name="condition" type="checkbox"
+                style="height:1.5rem; text-align: left; width:1.5rem; vertical-align: middle; margin-right: 1rem; margin-left: 1rem;" />
+              <span class="contact_content-form--label" style="font-size: 1.2rem; color: #000;">
+                En utilisant ce formulaire, vous acceptez le stockage et la gestion
+                de vos données par ce site * <a href="#" data-toggle="modal" class="link" data-target="#modal-rgpd"><i
+                    class="fa fa-info-circle"></i></a></span>
+              <i class="fa fa-info-square" aria-hidden="true"></i>
+            </div>
+          </div>
+          <div id="contact-form-response"></div>
+          <div class="form-group d-flex justify-content-center">
+            <div class="g-recaptcha" data-sitekey="6LdeDUYqAAAAAC1UlQ6y0fpkW6goL2R9vyVR0U9q">
+            </div>
+            <br />
+            <input style="display: none" type="submit" value="Submit" class="wpcf7-wpcf7-submit" />
+          </div>
+          <br><br>
+          <button type="submit" name="precontact" class="button3"> Envoyer </button>
+        </div>
+      </div>
+
+
+      </form>
+    </div>
+    <div class="col-md-4 liens">
+      <h3>Autre services </h3>
+      <h4 class="vide">Nos vérandas </h4>
+      <ul class="px-0">
+        <li class="p"><a href="les-etapes"><i class="fas fa-chevron-right"></i> Les étapes </a></li>
+        <li class="p"><a href="nos-styles"><i class="fas fa-chevron-right"></i> Nos styles</a></li>
+      </ul>
+    </div>
+    <div class="col-md-4">
+      <h3>Nos coordonnées </h3>
+      <div class="infos">
+        <p class="p"><i class="fas fa-home" aria-hidden="true"></i> 77000</p>
+        <p lass="p"><i class="fas fa-phone" aria-hidden="true"></i> <a href="tel:0185537588" class="colored">01 85 53 75 88</a>
+        </p>
+        <p class="p"><i class="fas fa-envelope" aria-hidden="true"></i> <a href="mailto:cfv.commercial@orange.fr"
+            class="colored">cfv.commercial@orange.fr</a></p>
+      </div>
+    </div>
+  </div>
+
+  </div>
+</section>
     </div>
     <div class="fixphone">
       <a href="tel:01 85 53 75 88" title="01 85 53 75 88" class="one phoneone">
