--- a/devis.html
+++ b/devis.html
@@ -258,7 +258,7 @@
             <div class="div01"></div>
 
             <div class="form-group has-feedback ">
-              <label>Type de projet </label>
+              <label class="l-bold">Type de projet </label>
 
               <div class="checkbox" style="margin-top: 0;">
                 <label><input type="checkbox" name="checkbox1"> Véranda </label>
@@ -277,7 +277,7 @@
 
 
             <div class="form-group has-feedback ">
-              <label>Dimension</label>
+              <label class="l-bold">Dimension</label>
               <select name="select1" id="form_select1" class="form-control">
                 <option>-----</option>
                 <option>Moins de 20m² </option>
